--- a/TODO
+++ b/TODO
@@ -1,13 +1,14 @@
-Bug: reset_dfl for complex object for dialog: RODial
+Need correct place for TOutArr get call. dynamic objects check
+Bug: reset_dfl for complex object for dialog: RODial, set? context?
+TIntegrator2: + combine TVibro, TFriction?
+TOutArr skip/range[min,max], enable.
 InputLogic: different ways to get bool value: Raise, Fall Both, Level....
-Need correct place for TOutArr get call.
 "N" parm may used only while initial array creation. Need more design.
 Fix/limit props on object load/create? Check setParm("props") in ctors. Edit it.
 Common parts in TIntegrator, TLinP1Q0, TVibro.
 TMatrix3D(done) + rotate (separate/same) + Quaternion?
 Combine subscheme links with ordinary. TSubScheme I/O redesign?
-DataHolders: ToXMLString
-TOutArr: use InputSimple (need conversion)
+TOutArr: use InputSimple (need conversion) ?? or keep
 TModel::startRun: list on vars to copy. List for engine aliases?
 chrono sleep_untill
 correct places for reset, set_link, *structChange..
