Removed unneded functions and call.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Need correct place for TOutArr get call. dynamic objects check
 Bug: reset_dfl for complex object for dialog: RODial, set? context?
+post_parm_set.
+flag: post_set on parent with wait?
 TIntegrator2: + combine TVibro, TFriction?
 TOutArr skip/range[min,max], enable.
 InputLogic: different ways to get bool value: Raise, Fall Both, Level....
