Small redesign CircBuf and TDelay.

--- a/TODO
+++ b/TODO
@@ -1,14 +1,16 @@
 Need correct time to gather info to PlotLabel
-BUG: Paste Holder( testd on string) loss values
+BUG: Paste Holder (tested on string) loss values
+BUG: "all changes" after small [sub]edit and cancel. Tmp obj? Swap?
+Rethink start iterations: separate func!
+Special TMiso (or ???) function: on_param_changed();
 Add meta about plot scale, angles to export fig.
-Bug: reset_dfl for complex object for dialog: RODial, set? context?
+BUG: reset_dfl for complex object for dialog: RODial, set? context?
 modification flag/usage rethink: only real data holder count?
 List of presets for element.
 Fix/limit props on object load/create? Check setParm("props") in ctors. Edit it.
 post_parm_set.
 flag: post_set on parent with wait?
 Rename in DataDialog (label).
-Label color (mod)
 TTrigger and TRandTrigger redesign.
 TIntegrator2: + combine TVibro, TFriction?
 Common parts in TIntegrator, TLinP1Q0, TVibro.
