--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ BUG: old value holded for object w/o clpCalcAtStart or disabled noCalcStart: nee
 Rethink start iterations: separate func!
 Better runScript: place for errors.
 Better engine: QJSEngine?
-modification flag/usage rethink: only real data holder count?
+modification flag/usage rethink: only real data holder count? + containers: object+-
 Need correct time to gather info to PlotLabel
 correct places for reset, set_link, *structChange..
 BUG: "all changes" after small [sub]edit and cancel. Tmp obj? Swap?
@@ -13,7 +13,6 @@ List of presets for element.
 Fix/limit props on object load/create? Check setParm("props") in ctors. Edit it.
 post_parm_set.
 flag: post_set on parent with wait?
-Rename in DataDialog (label).
 TTrigger and TRandTrigger redesign.
 TIntegrator2: + combine TVibro, TFriction?
 Common parts in TIntegrator, TLinP1Q0, TVibro.
