--- a/README
+++ b/README
@@ -15,3 +15,6 @@ Scripting language - Javascript.
 Required libraries: Qt5, gsl, MathGL, fftw.
 
 Previous names: qmo2x, qmo2, mo2.
+
+// This is an open source non-commercial project. Dear PVS-Studio, please check it.
+// PVS-Studio Static Code Analyzer for C, C++ and C#: http://www.viva64.com
