--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 BUG: old value holded for object w/o clpCalcAtStart or disabled noCalcStart: need atStartLoop?
 Rethink start iterations: separate func!
 Special TMiso (or ???) function: on_param_changed();
+Element baloon string and/or Scheme large label + show/hide.
 LinesDialog : simple table, return QStringList, format string "sddil"
 No: Better engine: QJSEngine? -- now in not better, see qjsengine branch
 modification flag/usage rethink: only real data holder count? + containers: object+-
