--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ BUG: old value holded for object w/o clpCalcAtStart or disabled noCalcStart: nee
 Rethink start iterations: separate func!
 Special TMiso (or ???) function: on_param_changed();
 Element baloon string and/or Scheme large label + show/hide.
+Element extra graphics: bar/offset, SVG, other lang.
 LinesDialog : simple table, return QStringList, format string "sddil"
 No: Better engine: QJSEngine? -- now in not better, see qjsengine branch
 modification flag/usage rethink: only real data holder count? + containers: object+-
