Add more QSL and fix years

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+main.cpp: common args split code
 BUG: old value holded for object w/o clpCalcAtStart or disabled noCalcStart: need atStartLoop?
 BUG: object button may change place in dialog: may by uncontrolled order?
 Info dialog: copy all to clipboard <Tab>, <NL>
